[package]
name = "oxideav-msmpeg4"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust Microsoft MPEG-4 (v1 / v2 / v3) decoder for oxideav — the codec behind DIV3 / DIV4 / MP41 / MP42 / MP43 AVI files, distinct from standard MPEG-4 Part 2 (XVID / DIVX / DX50)"
repository = "https://github.com/OxideAV/oxideav-msmpeg4"
homepage = "https://github.com/OxideAV/oxideav-msmpeg4"
readme = "README.md"
keywords = ["multimedia", "video", "msmpeg4", "divx3", "codec"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.0"
oxideav-codec = "0.0"
